--- a/mainfile/index.html
+++ b/mainfile/index.html
@@ -7,7 +7,7 @@
 </head>
 <link rel="stylesheet" href="/style.css">
 <body>
-    <h1>Wheel of luck</h1>
+    <h1 id="two">Wheel of luck</h1>
     <p>Welcome to Wheel of Luck, the ultimate game of chance and excitement! Spin the wheel and let fate decide your fortune as you embark on a thrilling journey filled with surprises and rewards. Whether you’re aiming for the grand prize or just looking to test your luck, each spin brings a new opportunity to win big. With vibrant graphics, engaging gameplay, and a variety of challenges, Wheel of Luck promises endless fun for players of all ages. Are you ready to take a chance and see where the wheel will take you? Spin now and let the adventure begin! 🎉🎡</p>
 </body>
 </html>
